--- a/chess/style.css
+++ b/chess/style.css
@@ -1,5 +1,5 @@
 /* Import common styles */
-@import url('../common/consent.css');
+@import url('../common/style.css');
 
 @import url('./promotion.css');
 
